plugins/formal-verification/testData/diagnostics/no_contracts/full_viper_dump.kt
// We're only interested in the preamble here, so the actual code doesn't matter.
fun <!VIPER_TEXT!>f<!>() {}